refactor: remove unused endpoint
